c2prj1_cards/grade.txt
Grading at Fri Dec 20 21:32:45 UTC 2019
Compiling cards.c
cards.c: In function ‘card_from_letters’:
cards.c:78:29: error: ‘valu_let’ undeclared (first use in this function)
      if (value_let >='0' && valu_let <= '9'){
                             ^
cards.c:78:29: note: each undeclared identifier is reported only once for each function it appears in
cards.c:82:25: error: incompatible types when returning type ‘unsigned int’ but ‘card_t {aka struct card_tag}’ was expected
        case '0': return temp.value=10;
                         ^
cards.c:83:25: error: incompatible types when returning type ‘unsigned int’ but ‘card_t {aka struct card_tag}’ was expected
        case 'J': return temp.value=11;
                         ^
cards.c:84:25: error: incompatible types when returning type ‘unsigned int’ but ‘card_t {aka struct card_tag}’ was expected
        case 'Q': return temp.value=12;
                         ^
cards.c:85:25: error: incompatible types when returning type ‘unsigned int’ but ‘card_t {aka struct card_tag}’ was expected
        case 'K': return temp.value=13;
                         ^
cards.c:86:25: error: incompatible types when returning type ‘unsigned int’ but ‘card_t {aka struct card_tag}’ was expected
        case 'A': return temp.value=14;
                         ^
cards.c:87:25: error: incompatible types when returning type ‘unsigned int’ but ‘card_t {aka struct card_tag}’ was expected
        default : return temp.value;
                         ^
cards.c:91:22: error: incompatible types when returning type ‘unsigned int’ but ‘card_t {aka struct card_tag}’ was expected
     case 's': return temp.value=0;
                      ^
cards.c:92:22: error: incompatible types when returning type ‘unsigned int’ but ‘card_t {aka struct card_tag}’ was expected
     case 'h': return temp.value=1;
                      ^
cards.c:93:22: error: incompatible types when returning type ‘unsigned int’ but ‘card_t {aka struct card_tag}’ was expected
     case 'd': return temp.value=2;
                      ^
cards.c:94:22: error: incompatible types when returning type ‘unsigned int’ but ‘card_t {aka struct card_tag}’ was expected
     case 'c': return temp.value=3;
                      ^
cards.c:95:23: error: incompatible types when returning type ‘suit_t {aka enum <anonymous>}’ but ‘card_t {aka struct card_tag}’ was expected
      default : return temp.suit;         
                       ^
Could not compile your card.c!

Overall Grade: FAILED
